# JustEnoughModCore

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  docs.sh  flake.nix  fmt.sh  init.sh  meson.build  overlay.nix  run.sh
nix/: sources.json
src/: CorePlugin.cpp
subprojects/: bgfx.wrap  dylib.wrap  spdlog.wrap
